--- a/css/style.css
+++ b/css/style.css
@@ -13,19 +13,21 @@ h1 {
   color: rosybrown;
   line-height: .8;
   margin: 3rem 0 1rem;
+  grid-column: 2/6;
 }
 
 main {
-  width: 1024px;
+  min-width: 850px;
+  max-width: 1024px;
   margin: 3rem auto;
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20%;
-  grid-template-rows: 20% 20% 20% 20% 20%;
+  grid-template-rows: 20% 20% 20% 400px 20%;
 }
 
 #siteLogo {
-  width: 100px;
-  margin-left: 75px;
+  padding-left: 20px;
+  width: 120px;
   z-index: 2;
   grid-column-start: 1;
   grid-column-end: 1;
@@ -33,13 +35,7 @@ main {
   grid-row-end: 1;
 }
 
-div .results {
-  border: 5px solid black;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 5;
-}
+
 
 section {
 
@@ -47,13 +43,14 @@ section {
   background-color: rgba(211, 187, 176, 0.3);
   padding: 2rem;
   grid-row: 2/4;
-  grid-column: 1/3;
+  grid-column: 1/6;
   display: flex;
   justify-content: space-between;
 }
 
 section img {
-  width: 350px;
+  width: 30%;
+  flex: 1 1 30%;
   max-height: 400px;
   border: 5px solid transparent;
   grid-column-start: 2;
@@ -68,10 +65,12 @@ section img:hover {
 
 ul {
   margin: 1rem;
+  grid-column: 2/6;
+  grid-row: 4/6;
 }
 
 /* -- button -- */
-section + div {
+section+div {
   background-color: rgba(128, 128, 128, 0.734);
   color: lightgrey;
   padding: .5rem 1rem;
@@ -80,9 +79,14 @@ section + div {
   font-size: .8rem;
   margin: 1rem;
   pointer-events: none;
+  border: 5px solid black;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 4;
+  grid-row-end: 5;
 }
 
-section + div.clicks-allowed {
+section+div.clicks-allowed {
   background-color: rosybrown;
   color: white;
   cursor: pointer;
@@ -90,6 +94,6 @@ section + div.clicks-allowed {
 }
 
 
-section + div.clicks-allowed:hover {
+section+div.clicks-allowed:hover {
   background-color: rgb(211, 187, 175);
 }
