--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 
 h1 {
   font-size: 5rem;
+  font-family: 'Nabla', cursive;
   color: darkgreen;
   line-height: .8;
   margin: 3rem 0 1rem;
@@ -28,6 +29,8 @@ main {
 }
 
 p {
+  background-color: rgb(255, 132, 0);
+  border: 30px solid black;
   padding: .5rem 1rem;
   grid-column-start: 1;
   grid-column-end: 3;
